Inflation adjustment commit. Re-calc numbers, adapted story, added new film-info. In otehr news: squashed rating-circle bug, included baseline-circle legend

--- a/movie.css
+++ b/movie.css
@@ -1,4 +1,3 @@
-
 /* +++ Colours +++
 
 
@@ -131,8 +130,8 @@ div#controls {
 	margin-right: 0;
 	width:  10vw;
 
-	/* display: none; */
-	display: flex; /* switch on for debugging */
+	display: none;
+	/* display: flex; */ /* switch on for debugging */
 	-ms-flex-direction: column;
 	    flex-direction: column;
 	-ms-flex-pack: center;
@@ -212,16 +211,6 @@ button {
 #legend-scatter img {
 	height: 38px;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -382,6 +371,8 @@ h2 {
 
 button.top {
 	background-color: #eee;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .subline {
@@ -454,6 +445,52 @@ span.film {
 
 
 
+/* --- Word pulse and circle pulse description --- */
+
+.word-pulse::before {
+
+	content: "blinking";
+	position: absolute;
+	color: #FF7F00;
+	animation: word-pulse-anim 2.5s ease infinite;
+
+}
+
+@keyframes word-pulse-anim {
+	
+	0% {
+		transform: scale(1);
+		opacity: 0.6;
+	}
+
+	100% {
+		transform: scale(1.5);
+		opacity: 0;
+	}
+
+}
+
+.blink-colour-orange {
+
+	color: #FF7F00;
+
+}
+
+.blink-colour-yellow {
+
+	color: #FFFF33;
+
+}
+
+.blink-colour-green {
+
+	color: #4DAF4A;
+
+}
+
+
+
+
 /* === Logo === */
 
 div#logo {
@@ -466,7 +503,7 @@ div#logo a {
 }
 
 div#logo img {
-	width: 15vw;
+	width: 10vw;
 }
 
 
